--- a/style.scss
+++ b/style.scss
@@ -1,13 +1,32 @@
-$bg: rgba(44,44,44,1);
+$black: rgba(11,11,11,1);
+$gray: rgba(80,80,80,1);
 $text: rgba(222,222,222,1);
 
+$blue: rgb(45, 35, 165);
+$white: rgba(255,255,255, 0.95);
+
+@import url('./node_modules/minireset.css/minireset.min.css');
 
 body {
-  background-color: $bg;
+  background-color: $black;
   color: $text;
+  min-height: 100vh;
+
+  a {
+    color: $white;
+    text-decoration: none;
+  }
 }
 
 .grid-container {
-  background-color: rgb(150, 150, 150);
+  min-height: 100vh;
   display: grid;
+  background-color: rgb(150, 150, 150);
+  grid-template-columns: 3;
+}
+
+header {
+  background-color: $blue;
+  width: 100%;
+  padding: 20px 0;
 }
