--- a/style.scss
+++ b/style.scss
@@ -3,11 +3,18 @@ $gray: rgba(80,80,80,1);
 $text: rgba(222,222,222,1);
 
 $blue: rgb(45, 35, 165);
+$teal: rgb(19, 203, 203);
 $white: rgba(255,255,255, 0.95);
+
+$phone: 567px;
+$tablet: 768px;
+$laptop: 992px;
+$desktop: 1200px;
 
 @import url('./node_modules/minireset.css/minireset.min.css');
 
 body {
+  font-family: "Operator Mono";
   background-color: $black;
   color: $text;
   min-height: 100vh;
@@ -15,18 +22,136 @@ body {
   a {
     color: $white;
     text-decoration: none;
+    transition: color ease 150ms;
+
+    &:hover {
+      color: $teal;
+    }
   }
 }
 
 .grid-container {
   min-height: 100vh;
   display: grid;
-  background-color: rgb(150, 150, 150);
   grid-template-columns: 3;
+
+  .columns {
+    display: grid;
+  }
+  .inner {
+    padding: 2rem 0;
+    width: 90%;
+    margin: 0 auto;
+
+    @media (min-width: $phone) {
+      width: 80%;
+    }
+  }
+  .full {
+    padding: 2rem;
+    background-color: $gray;
+
+    p {
+      font-size: 1.3rem;
+      font-weight: bold;
+      line-height: 2rem;
+    }
+  }
 }
 
 header {
   background-color: $blue;
   width: 100%;
   padding: 20px 0;
+
+  .inner {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+  }
+
+  .logo {
+    font-family: "Operator Mono";
+    font-style: italic;
+    font-size: 3rem;
+  }
+  nav {
+    ul {
+      display: flex;
+      flex-direction: row;
+      margin-top: 20px;
+
+      li {
+        margin-right: 45px;
+
+        a {
+          font-size: 1.2rem;
+        }
+      }
+    }
+  }
 }
+
+footer {
+  background-color: $teal;
+
+  p {
+    text-align: center;
+  }
+  a {
+    color: $black;
+  }
+}
+
+.grid-demo {
+  h2 {
+    margin-top: 2rem;
+    font-size: 3rem;
+    font-weight: bold;
+    padding-top: 1rem;
+    border-top: 4px solid $blue;
+  }
+}
+.columns {
+  grid-template-columns: 1fr;
+  gap: 1.5rem;
+  margin: 1.5rem 0;
+
+  @media (min-width: $laptop) {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .col {
+    background-color: $blue;
+    padding: 1.4rem;
+
+    h3 {
+      font-size: 1.4rem;
+      font-weight: bold;
+      font-style: italic;
+      margin-bottom: 0.8rem;
+    }
+  }
+
+  &.five-col {
+    grid-template-columns: 1fr;
+
+    @media (min-width: $phone) {
+      grid-template-columns: 1fr 1fr;
+    }
+    @media (min-width: $laptop) {
+      grid-template-columns: 40% 1fr 1fr;
+    }
+    .col:nth-child(1) {
+      display: grid;
+      align-content: space-around;
+
+      @media (min-width: $phone) {
+        grid-column: span 2;
+      }
+      @media (min-width: $laptop) {
+        grid-row: span 2;
+        grid-column: 1;
+      }
+    }
+  }
+}//.columns
